crates/ferrum-interfaces/tests/ui/vnext/fail/resource_use_after_release.rs
use ferrum_interfaces::vnext::*;

fn use_after_release<D: ResourceTransactionDriver>(
    committed: ResourceTransaction<D, TransactionCommitted>,
) {
    let _released = committed.release();
    let _ = committed.lease();
}

fn main() {}
